alignment fixed

--- a/components/home/betterSystem/betterSystem.module.scss
+++ b/components/home/betterSystem/betterSystem.module.scss
@@ -84,6 +84,7 @@
 		margin-top: 60px;
 
 		.container {
+			width: 334px;
 			gap: 20px;
 			justify-content: center;
 			.imageContainer {
