--- a/components/home/yourFertility/yourFertility.module.scss
+++ b/components/home/yourFertility/yourFertility.module.scss
@@ -86,11 +86,12 @@
 		}
 	}
 }
-@media (max-width: 700px) {
+@media (max-width: 900px) {
 	.main {
 		margin-top: 60px;
 		margin-bottom: 0px;
 		.container {
+			width: 334px;
 			gap: 40px;
 			justify-content: center;
 			.imageContainer {
@@ -101,6 +102,7 @@
 				}
 			}
 			.titleAndAction {
+				width: 100%;
 				.description {
 					margin-bottom: 20px !important;
 				}
